--- a/css.yaml
+++ b/css.yaml
@@ -4,18 +4,18 @@ appendCommitMessageToRunName: false
 
 resources:
   repositories:
-    - repository: prcheck
+    - repository: MyFirstpipeline
       type: github
-      name: 'kohithreddy/prcheck'
+      name: 'kohithreddy/MyFirstpipeline'
       endpoint: 'ReddyStuff'
-#       trigger: 
-#         branches:
-#          include: 
-#           - 'feature/futcor-drop-1.0-*'
-#           - 'feature/futcor-drop-1.2-*'
-#           - 'feature/futcor-drop-1.3-*'
-#          exclude:
-#           - release/*
+      trigger: 
+        branches:
+         include: 
+          - 'feature/futcor-drop-1.0-*'
+          - 'feature/futcor-drop-1.2-*'
+          - 'feature/futcor-drop-1.3-*'
+         exclude:
+          - release/*
 
 
 trigger:
